--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   font_awesome_flutter: ^8.10.0
+  rflutter_alert: ^1.0.2
+  flutter_spinkit: "^4.1.2"
 
 dev_dependencies:
   flutter_test:
@@ -20,3 +22,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - images/gif.gif
+    - images/bmi.png
+    - images/bmi1.png
